Fixed icon position on mobile screen

--- a/css/main.css
+++ b/css/main.css
@@ -309,7 +309,7 @@ input[type=button] {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  background: url('../css/../img/rawpixel-800820-unsplash1.png') no-repeat center;
+  background: url('../css/../img/rawpixel-800820-unsplash1.png') center;
   background-size: cover;
 }
 
@@ -321,6 +321,10 @@ input[type=button] {
 .features article {
   width: 63%;
   margin: 30px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 .features .features-items {
